--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -2,326 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Oleo+Script:400,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <title>HTML, CSS exam</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>GpiC visit card</title>
 </head>
 <body>
-<div class="wrapper">
-    <div class="navigation">
-        <p class="navigation-logo">Officetime
-            <span>Officetime a psd template</span>
-        </p>
-
-        <nav class="navigation-menu">
-            <a class="navigation-menu-tab" href="">Home</a>
-            <a class="navigation-menu-tab" href="">About</a>
-            <a class="navigation-menu-tab" href="">Products</a>
-
-            <div class="navigation-menu-tab">
-                <a href="">Blog</a>
-                <ul class="navigation-submenu">
-                    <li>
-                        <a href="">Articles
-                            <span>this text is complimentary</span>
-                        </a>
-                    </li>
-                    <hr>
-                    <li><a href="">Writers</a></li>
-                    <hr>
-                    <li><a href="">Top 50</a></li>
-                    <hr>
-                    <li><a href="">The Hell of frame</a></li>
-                </ul>
+    <div class="wrapper">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle btn btn-navbar" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <img src="img/logo_strogo_white.png" height="40px"/>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" >
+                    <ul class="nav navbar-nav navbar-right text-center">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#team">Team</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
+                    </ul>
+                    <!--<ul class="nav navbar-nav navbar-right text-center">-->
+                        <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
+                        <!--<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
+                    <!--</ul>-->
+                </div>
             </div>
-            <a class="navigation-menu-tab" href="">Help</a>
-            <button class="navigation-menu-button">Apply Now</button>
         </nav>
+
+        <section id="home">
+            <img src="img/negativ.jpg">
+        </section>
+
+        <section id="about">
+            <p>About Us</p>
+            <p>We are a group of 2 experienced Developers and a Project Manager.</p>
+        </section>
+        <section id="team">
+            <p>Team</p>
+            <div class="team-person">
+                <p>Edward</p>
+                <p>description</p>
+                <img src="#">
+            </div>
+
+            <div class="team-person">
+                <p>Edward</p>
+                <p>description</p>
+                <img src="#">
+            </div>
+
+            <div class="team-person">
+                <p>Edward</p>
+                <p>description</p>
+                <img src="#">
+            </div>
+
+        </section>
+        <section id="projects">
+            <img class="projects-arrow arrow-left pull-left" src="img/arrow-left.png">
+            <img class="projects-arrow arrow-right pull-right" src="img/arrow-right.png">
+        </section>
+        <section id="contacts"></section>
+        <footer></footer>
     </div>
-
-    <section class="ad">
-
-        <div class="ad-item">
-            <div class="ad-item-img">
-                <div class="ad-item-bar-arrow"><img src="img/arrow-left.png" alt="">
-                </div>
-                <div class="ad-item-bar">
-                    <p class="ad-item-bar-title">Great Lakehouse with Land</p>
-
-                    <p class="ad-item-bar-description">from 21K
-                        <span> - in Texas, USA</span>
-                    </p>
-                </div>
-                <div class="ad-item-bar-arrow">
-                    <img src="img/arrow-right.png" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="ad-description">
-            <h1 class="ad-description-title">The amazing Spider-Man</h1>
-
-            <p class="ad-description-body">Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas sed diam eget
-                risus varius blandit sit.</p>
-            <hr>
-
-            <button class="ad-description-button">
-                <div class="ad-description-button-arrow">
-                    <i class="fa fa-chevron-right"></i>
-                </div>
-
-                <p class="ad-description-button-name">Watch Trailer
-                    <span>IN 720P QALITY</span></p>
-            </button>
-
-            <div class="ad-description-more">
-                Or just <a href="">click here </a> and fins out more
-            </div>
-
-        </div>
-    </section>
-    <hr class="between_sections">
-
-    <section class="articles">
-        <h2 class="articles-title">The Undiscovered Beauty</h2>
-
-        <div class="articles-body">
-
-            <div class="articles-body-item">
-                <div class="articles-body-item-head">
-
-                    <div class="articles-body-item-head-pic">
-
-                        <img src="img/forest.jpg" alt=""/>
-
-                        <div class="articles-body-item-head-pic-hover">
-
-                            <div class="circle-button">
-                                <div class="sprite arrow"></div>
-                            </div>
-
-                            <div class="circle-button">
-                                <div class="plus">+</div>
-                            </div>
-
-                            <div class="circle-button">
-                                <div class="sprite download"></div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <h3 class="articles-body-item-head-title">Vehicula Inceptos Pharetra</h3>
-
-                    <p class="articles-body-item-head-description">Aenean eu leo quam. Pellentesque ornare sem
-                        lacinia.</p>
-                </div>
-
-                <p class="articles-body-item-content">Praesent commodo
-                    cursus magna, vel scelerisque nisl consectetur et. Maecenas
-                    faucibus mollis interdum. Donec ullamcorper nulla non metus
-                    auctor fringilla. Praesent commodo cursus magna, vel
-                    scelerisque nisl consectetur et. Sed posuere consectetur
-                    est at lobortis. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit.
-                </p>
-
-            </div>
-
-
-            <div class="articles-body-item">
-                <div class="articles-body-item-head">
-
-                    <div class="articles-body-item-head-pic">
-                        <img src="img/fields.jpg" alt=""/>
-
-                        <div class="articles-body-item-head-pic-hover">
-
-                            <div class="circle-button">
-                                <div class="sprite arrow"></div>
-                            </div>
-
-                            <div class="circle-button">
-                                <div class="plus">+</div>
-                            </div>
-
-                            <div class="circle-button">
-                                <div class="sprite download"></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <h3 class="articles-body-item-head-title">Euismod
-                        Pellentesque Egestas Commodo
-                    </h3>
-
-                    <p class="articles-body-item-head-description">Cum sociis
-                        natoque penatibus et magnis dis parturient.
-                    </p>
-                </div>
-                <p class="articles-body-item-content">Morbi leo risus, porta ac
-                    consectetur ac, vestibulum at eros. Cras justo odio, dapibus
-                    ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac
-                    cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                    massa justo sit amet risus. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit.</p>
-            </div>
-
-            <div class="articles-body-item">
-                <div class="articles-body-item-head">
-
-                    <div class="articles-body-item-head-pic">
-                        <img src="img/bird.jpg" alt=""/>
-
-                        <div class="articles-body-item-head-pic-hover">
-
-                            <div class="circle-button">
-                                <div class="sprite arrow"></div>
-                            </div>
-
-                            <div class="circle-button">
-                                <div class="plus">+</div>
-                            </div>
-
-                            <div class="circle-button">
-                                <div class="sprite download"></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <h3 class="articles-body-item-head-title"> Tristique Dapibus</h3>
-
-                    <p class="articles-body-item-head-description">Curabitur blandit tempus porttitor.</p>
-                </div>
-
-                <p class="articles-body-item-content">Fusce dapibus, tellus ac
-                    cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                    massa justo sit amet risus. Vivamus sagittis lacus vel augue
-                    laoreet rutrum faucibus dolor auctor. Nullam quis risus eget
-                    urna mollis ornare vel eu leo. Donec sed odio dui.</p>
-            </div>
-
-        </div>
-    </section>
-
-    <section class="content">
-        <h2 class="articles-title">Ta<span class="text-highlight">bbb</span>s get your content in line</h2>
-
-        <div class="content-body">
-            <div class="content-body-tabs">
-                <div class="content-body-tabs-header clearfix"> <!--need to be closed-->
-                    <a class="content-body-tabs-item" data="one">Tabbb One</a>
-                    <a class="content-body-tabs-item" data="two">Tabbb Two</a>
-                    <a class="content-body-tabs-item" data="three">Tabbb Three</a>
-
-                    <div class="content-body-tabs-content active" data="one">
-                        <h3 class="content-body-head">You content can be
-                            <span class="text-highlight">highlighted</span> like this.
-                        </h3>
-
-                        <ul class="content-body-list">
-                            <li>Magna Porta</li>
-                            <li>Cras Amet Pharetra</li>
-                            <li>Ornare Dolor Oharetra</li>
-                            <li>Nibh Sit Elit</li>
-                            <li>Venenatis Tortor Aenean</li>
-                        </ul>
-
-                        <div class="content-body-item">
-                            <div class="content-body-item-img">
-                                <img src="img/road.jpg" alt=""/>
-                            </div>
-
-                            <div class="content-body-item-description">
-                                <h4 class="content-body-item-description-head">Type a Title</h4>
-
-                                <p class="content-body-item-description-text">Nulla vitae elit libero, a pharetra augue.
-                                    Maecenas sed diam eget risus varius blandit sit amet magna.
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="content-body-item">
-                            <div class="content-body-item-img">
-                                <img src="img/boat.jpg" alt=""/>
-                            </div>
-
-                            <div class="content-body-item-description clearfix">
-                                <h4 class="content-body-item-description-head">Type a Title</h4>
-
-                                <p class="content-body-item-description-text">Donec id elit non mi porta gravida at eget
-                                    metus.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="content-body-tabs-content" data="two">Doesn't matter what</div>
-                    <div class="content-body-tabs-content" data="three">Who cares?</div>
-
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <hr class="between_sections">
-
-    <footer class="clearfix">
-        <div class="footer-item">
-            <h4 class="footer-item-title">Single menu title</h4>
-            <ul class="footer-item-list">
-                <li><a href="" class="footer-item-list-link">Condimentum Etiam Purus</a></li>
-                <li><a href="" class="footer-item-list-link">Quam Tristique Sem</a></li>
-                <li><a href="" class="footer-item-list-link">Fusce Parturient</a></li>
-                <li><a href="" class="footer-item-list-link">Tristique Tortor Condimentum</a></li>
-                <li><a href="" class="footer-item-list-link">Magna Parturient Aenean</a></li>
-                <li><a href="" class="footer-item-list-link">Tortor Nibh Etiam</a></li>
-            </ul>
-        </div>
-
-        <div class="footer-item footer-item-2">
-            <h4 class="footer-item-title">Cursus venenats mollis</h4>
-            <ul class="footer-item-list">
-                <li><a href="" class="footer-item-list-link">Condimentum Etiam Purus</a></li>
-                <li><a href="" class="footer-item-list-link">Quam Tristique Sem</a></li>
-                <li><a href="" class="footer-item-list-link">Fusce Parturient</a></li>
-                <li><a href="" class="footer-item-list-link">Tristique Tortor Condimentum</a></li>
-                <li><a href="" class="footer-item-list-link">Magna Parturient Aenean</a></li>
-                <li><a href="" class="footer-item-list-link">Cursus Justo Fringilla</a></li>
-            </ul>
-        </div>
-
-        <div class="footer-item">
-            <h4 class="footer-item-title">Latest articles</h4>
-            <ul class="footer-item-list-latest">
-                <li>
-                    <div class="footer-item-list-latest-item">
-                        <span class="footer-item-list-latest-title">Fusce Etiam Bibenum</span>
-                        <a href="" class="footer-item-list-latest-link clearfix">Sed posuere consectetur est
-                            at lobortis.
-                        </a>
-                    </div>
-                </li>
-
-                <li>
-                    <span class="footer-item-list-latest-title">Fusce Partrient</span>
-                    <a href="" class="footer-item-list-latest-link clearfix">Maecenas faucibus mollis
-                        interdum. Cras justo odio, dapibus ac facilisis in, egestas
-                        eget quam.</a>
-
-                </li>
-
-                <li>
-                    <span class="footer-item-list-latest-title">Magna Parturient Aenean</span>
-                    <a href="" class="footer-item-list-latest-link clearfix">Cum sociis natoque penatibus et
-                        magnis dis parturient montes, nascetur ridiculus mus.</a>
-
-                </li>
-
-            </ul>
-        </div>
-    </footer>
-</div>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
